--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/ubuntu": "^5.0.8",
+    "bootstrap": "^5.3.2",
+    "scss": "^0.2.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
