--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/ubuntu": "^5.0.8",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "scss": "^0.2.4",
     "vue": "^3.3.4"
